test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_parse/bad_specifier.plx
pub fn main(none) i32 {
  v: *u32 any; # you can't combine void with other type specifiers
  return 0
}
